changed client code to populate movie list

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -263,7 +263,8 @@ header h2, #real_header h4 {
 
 .project > img {
   width: 100%;
-  max-height: 210px;
+  height: 450px;
+  object-fit: cover;
   border: 10px solid white;
   border-radius: 5px;
 }
@@ -273,12 +274,12 @@ header h2, #real_header h4 {
   font-weight: bold;
   position: absolute;
   background: #F5A72B;
-  font-size: 9pt;
+  font-size: 14pt;
   text-align: center;
-  padding: 0.6em;
-  width: 50%;
-  right: 6%;
-  top: 7.5%;
+  padding: 1em;
+  width: 100%;
+  right: 10%;
+  top: 5%;
   transform: translate(50%, -50%) rotate(45deg);
 }
 
@@ -289,7 +290,7 @@ header h2, #real_header h4 {
 .projectTitle {
   display: table;
   margin: 0.2em 0;
-  width: 100%;
+  width: 100%;  
 }
 
 .projectTitle > * {
@@ -300,34 +301,15 @@ header h2, #real_header h4 {
   color: #AEBAC5;
   vertical-align: top;
   width: 60%;
+  font-size: 20pt;
 }
 
 .projectTitle > div > div {
-  width: 24px;
-  height: 24px;
+  font-size: 20pt;
   border-radius: 50%;
   display: inline-block;
   margin: 0 1px;
-}
-
-.redPoint {
-  background: radial-gradient(#B57567, #D4A6A1);
-}
-
-.yellowPoint {
-  background: radial-gradient(#C49750, #D9B073);
-}
-
-.greenPoint {
-  background: radial-gradient(#A1B48A, #C3D0B5);
-}
-
-.cyanPoint {
-  background: radial-gradient(#75AFAA, #9BC5C1);
-}
-
-.disablePoint {
-  background: radial-gradient(#D7D7D7, #E9E8EB);
+  color: #E4BB24;
 }
 
 #articles {
